--- a/render.yaml
+++ b/render.yaml
@@ -1,33 +1,46 @@
 services:
-  # Backend service
+  # Next.js Full-Stack Application (replaces Flask backend + static frontend)
   - type: web
-    name: feedback-app-backend
-    env: python
+    name: zyntel-feedback
+    env: node
     region: oregon
-    buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
-    rootDir: backend
+    rootDir: nextjs-app
+    buildCommand: npm install && npm run db:generate && npm run build
+    startCommand: npm start
     envVars:
       - key: DATABASE_URL
         sync: false
-      - key: SMTP_HOST
-        value: smtp.gmail.com
-      - key: SMTP_PORT
-        value: 587
-      - key: SMTP_USER
+      - key: JWT_SECRET
+        generateValue: true
+      - key: NODE_ENV
+        value: production
+      - key: NEXT_PUBLIC_BASE_URL
         sync: false
-      - key: SMTP_PASSWORD
-        sync: false
+      - key: NEXT_PUBLIC_API_URL
+        value: /api
     healthCheckPath: /
 
-  # Frontend service (static site)
-  - type: web
-    name: feedback-app-frontend
-    env: static
-    region: oregon
-    staticPublishPath: frontend
-    buildCommand: echo "No build needed for static site"
-    routes:
-      - type: rewrite
-        source: /*
-        destination: /index.html
+  # Legacy Flask Backend (optional - can be removed after migration)
+  # - type: web
+  #   name: feedback-app-backend
+  #   env: python
+  #   region: oregon
+  #   buildCommand: pip install -r requirements.txt
+  #   startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
+  #   rootDir: backend
+  #   envVars:
+  #     - key: DATABASE_URL
+  #       sync: false
+  #   healthCheckPath: /
+
+  # Legacy Frontend (optional - can be removed after migration)
+  # - type: web
+  #   name: feedback-app-frontend
+  #   env: static
+  #   region: oregon
+  #   staticPublishPath: frontend
+  #   buildCommand: echo "No build needed for static site"
+  #   routes:
+  #     - type: rewrite
+  #       source: /*
+  #       destination: /index.html
