Add debug output to build command

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     env: node
     region: oregon
     rootDir: nextjs-app
-    buildCommand: npm install && npm run db:generate && npm run build
+    buildCommand: ls -la && ls -la components lib && npm install && npm run db:generate && npm run build
     startCommand: npm start
     envVars:
       - key: DATABASE_URL
