--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -24,7 +24,10 @@
     "zod": "^3.23.0",
     "lucide-react": "^0.427.0",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^2.5.0"
+    "tailwind-merge": "^2.5.0",
+    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.40"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
@@ -35,9 +38,6 @@
     "@types/qrcode": "^1.5.5",
     "typescript": "^5.5.0",
     "prisma": "^5.19.0",
-    "tailwindcss": "^3.4.0",
-    "autoprefixer": "^10.4.19",
-    "postcss": "^8.4.40",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0"
   }
