--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -31,12 +31,12 @@
     "typescript": "^5.5.0",
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.0",
-    "@types/react-dom": "^18.3.0"
+    "@types/react-dom": "^18.3.0",
+    "@types/qrcode": "^1.5.5"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
-    "@types/qrcode": "^1.5.5",
     "prisma": "^5.19.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.0"
