--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
-    "start": "cd .next/standalone && node server.js",
+    "build": "npx prisma generate && next build",
+    "start": "next start",
     "lint": "next lint",
     "db:generate": "npx prisma generate",
     "db:push": "npx prisma db push",
