--- a/.gitignore
+++ b/.gitignore
@@ -1,40 +1,38 @@
-﻿# Environment variables
-.env
-*.env.local
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Python cache
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
+# testing
+/coverage
 
-# PyInstaller outputs
-build/
-dist/
-*.spec
+# next.js
+/.next/
+/out/
 
-# Logs
-*.log
+# production
+/build
 
-# Database files
-*.db
-*.sqlite
-
-# Backup files
-backups/
-
-# Virtual environments
-venv/
-
-# IDE files
-.vscode/
-.idea/
-
-# OS files
+# misc
 .DS_Store
-Thumbs.db
+*.pem
 
-# Runtime folders
-public/
-debug/
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+.env
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# prisma
+/prisma/migrations
 
